# artwhip-neue

./: .gitignore  Cargo.toml  build.rs  flake.nix
.sqlx/: query-0c56541b8638077ab45d6a45c9f589a95c49312ebdd75faaf37b71dc3f74ce8c.json  query-12c88153fa89ba7b0c007f72181a04d3070933216df05425362210d3ea93a07c.json  query-13e345c4080cbb6e7a8ccc4d0d6c377f109ed2260891bd98bcc510ca200efedc.json  query-2347b306c0dd1209b13577938bee015dcf70d37216d6cc545e8ede25738548f5.json  query-564af624e82be7a2557d5dcaf79992c6cfbe735d9919bb5ecbd9b8a77249f626.json  query-79e893ee3716a6fd67517f6f66c063a85aef2f83382d62edb836a47263b23b45.json  query-c4c99c161558c58d690733371bc908414de05489cf236ac9aedf80254d6067e5.json  query-ce3b72aa5ebf71c453ae73cdbcfecf22bde686cdd9c3ae92804017b0af387cee.json  query-de1a9a2684fa0b389f18b2bf2db895ccf7254fa4a7c9cbfbf6ec918e53b93d1b.json  query-e5bdb1d08ff581b50f30c28c4bbf9f41dd2e40b15b37ef636d911965e3127e16.json  query-f2498920d6cb68dc6793df908d6b198b11ba613b6e404f93a19fe5a2092ede6d.json
migrations/: 20240409104028_create_tables.sql  20240419065936_add_current_enrollments_view.sql
src/: main.rs
src/commands/: mod.rs
src/models/: enrollment.rs  mod.rs  period.rs  share.rs
src/services/: enrollment.rs  gif.rs  mod.rs  period.rs  reminder.rs  share.rs  streak.rs
