[package]
name = "artwhip"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0"
chatgpt_rs = "1.2"
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
poise = "0.6"
serde = { version = "1.0", features = ["derive"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite", "chrono"] }
thiserror = "1.0"
tokio = { version = "1.37", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = "1.8"
